# Cpp_QL

./: .gitignore  CMakeLists.txt  Cpp_Ql.h  Database.cpp  Database.h  Environment.cpp  Environment.h  Main.cpp  Match.h  Print.h  README.md  Result.h  Result_Old.h  Sum_type.h  Table.cpp  Table.h  Type.cpp  Type.h  Typedefs.h  Util.h
